Moved lesso2.html. Fixed div spacing in lesson02

--- a/lesson2/styles/lesson2.css
+++ b/lesson2/styles/lesson2.css
@@ -11,7 +11,6 @@
   main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 10px;
     align-items: start;
     justify-items: center;
   }
@@ -50,15 +49,23 @@
 
   .content {
     background-color: var(--accent1-color);
-    width: 90%;
+    max-width: 320px;
     border:lightgray solid 1px;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
     display: grid;
     grid-template-columns: 1fr;
+  }
+  h3 {
+    margin-bottom: 6px;
+  }
+  .box-a {
+    padding-bottom: 10px;
   }
   .contentTitle {
     background-color: var(--secondary-color);
